# tigerfeat

./: LICENSE  README.md  pyproject.toml
tigerfeat/: __init__.py  core.py
tigerfeat/back/: core_back.py
tigerfeat/v2/: config.py  model.py
tigerfeat/v2/backends/: base.py  hf.py  timm.py  xray.py
